apply plugin: 'java'

sourceCompatibility = '11'

compileJava {
    options.compilerArgs += ['--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED']
}

jar {
    manifest {
    }
    
    from {
     //   configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

repositories {
    mavenCentral()
    // You may define additional repositories, or even remove "mavenCentral()".
    // Read more about repositories here:
    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:repositories
}

dependencies {
   compile fileTree(dir: 'libs', include: '*.jar')
}
